tests/negative_tests/semantic_errors/logical_not_int.c
// INVALID - Type Error: logical NOT requires bool
int main() {
    int x;
    bool result;
    x = 5;
    result = !x;  // ERROR: ! requires bool operand (int to bool is narrowing)
    return 0;
}
